devops/04-gitlab-persistent/03-gitlab/04-svc-gitlab.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: devops
spec:
  ports:
    - name: http
      port: 80           
      targetPort: 80    
    - name: ssh
      port: 22 
      targetPort: 22
  type: ClusterIP
  selector:
    name: gitlab
